# solartool

./: .gitattributes  .gitignore  Cargo.toml  build.rs
plists/: ap_hellopurple.plist  solar_bigsur.plist  solar_solargradients.plist
src/: cmd_extract.rs  cmd_query.rs  main.rs  metadata.rs
src/metadata/: solar.rs  structs.rs  utils.rs
