[package]
name = "solartool"
version = "0.2.1"
edition = "2021"
rust-version = "1.77.2" # TODO: update to 1.78.0 once the github runners are updated

[dependencies]
xmp_toolkit = { version = "1.7.3", features = ["chrono"] }
clap = { version = "4.5.4", features = ["derive"] }
const_format = "0.2.32"
libheif-rs = "1.0.1"
chrono = "0.4.38"
roxmltree = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }

[build-dependencies]
chrono = "0.4.38"