[package]
name = "solartool"
version = "0.3.0"
repository = "https://github.com/SamusAranX/solartool"
edition = "2021"
rust-version = "1.77.2" # TODO: update to 1.78.0 once the github runners are updated

[dependencies]
xmp_toolkit = { version = "1.7.3", features = ["chrono"] }
clap = { version = "4.5.4", features = ["derive"] }
const_format = "0.2.32"
libheif-rs = "1.0.1"
chrono = "0.4.38"
roxmltree = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
base64 = "0.22.1"
plist = "1.6.1"
serde_derive = "1.0.201"
serde_json = "1.0.117"

[build-dependencies]
chrono = "0.4.38"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Use a sane archive format
unix-archive = ".zip"
windows-archive = ".zip"
# Don't upload a redundant source tarball
source-tarball = false
# Publish jobs to run in CI
pr-run-mode = "upload"
