[package]
name = "solartool"
version = "0.3.0"
repository = "https://github.com/SamusAranX/solartool"
edition = "2021"
rust-version = "1.80"

[dependencies]
xmp_toolkit = { version = "1.9.0", features = ["chrono"] }
clap = { version = "4.5.13", features = ["derive"] }
const_format = "0.2.32"
libheif-rs = "1.0.2"
chrono = "0.4.38"
roxmltree = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
base64 = "0.22.1"
plist = "1.7.0"
serde_derive = "1.0.204"
serde_json = "1.0.122"

[build-dependencies]
chrono = "0.4.38"